--- a/contacts.html
+++ b/contacts.html
@@ -9,19 +9,20 @@
     <h2>Contacts:</h2>
     <ul>
         <li>Phone: <strong>+55 91 9 8815-3730</strong></li>
+        <br>
         <li>E-mail: <strong>rafaeljamil@gmail.com</strong></li>
 
     </ul>
     <hr>
-    <form action="mailto:somewhere@internet.com" method="POST" enctype="text/plain">
+    <form action="mailto:rafaeljamil@gmail.com" method="POST" enctype="text/plain">
         <label>Your Name</label>
         <input type="text" name="name" value=""><br>
+        <br>
         <label>Your e-mail</label>
         <input type="email" name="email"><br>
+        <br>
         <label>Leave a message:</label><br>
         <textarea name="message" id="" cols="30" rows="10"></textarea><br>
-        <label>Sign up for e-mail list?</label>
-        <input type="checkbox">
         <input type="submit">
     </form>
 </body>
