--- a/hobbies.html
+++ b/hobbies.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Hobbies</h1>
     <ol>
-        <li>Learn about <a href="https://www.bbc.com/news/technology">Technology</a></li>
-        <li><a href="https://upload.wikimedia.org/wikipedia/commons/5/59/Evb-my_hog.jpg">Motorcycles</a> (riding and servicing)</li>
-        <li>Play <a href="https://store.steampowered.com/">videogames</a></li>
+        <li>Technology</li>
+        <li>Motorcycles (riding and servicing)</li>
+        <li>Videogames</li>
     </ol>
 </body>
 </html>
