--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="mil.jpeg" alt="Jamil profile image" /></td>
+        <td><img src="mil.png" alt="Jamil profile image" /></td>
         <td>
           <h1>Jamil Pinheiro</h1>
           <p>
-            <em><strong>Web Developer</strong>, English Teacher, Gamer</em>
+            <em><strong>English Teacher</strong></em>
           </p>
           <p>
             I'm an English teacher, graduating in English at Universidade
-            Federal do Pará, self-taught Web Developer, self-taught motorcycle
-            mechanic and half-nerd.
+            Federal do Pará - Brazil, self-taught Programmer/Web Developer and half-nerd.
           </p>
         </td>
       </tr>
@@ -35,7 +34,7 @@
     </ul>
     <hr>
     <h3>Work Experience</h3>
-    <table border="2">
+    <table cellspacing="10">
       <thead>
         <tr>
           <th align="left">Dates</th>
@@ -58,15 +57,15 @@
     <table cellspacing="10">
       <tr>
         <td>Programming</td>
-        <td>XXOOO</td>
+        <td>⭐⭐</td>
         <td>English</td>
-        <td>XXXXO</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Gaming</td>
-        <td>XXXOO</td>
-        <td>Driving</td>
-        <td>XXXXO</td>
+        <td>⭐⭐⭐</td>
+        <td>Learning</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
     </table>
 
